# crowdarr

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  PLAN.md  README.md  config.example.yaml  docker-compose.example.yml  docker-compose.macvlan.example.yml  docker-entrypoint.sh  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docker.yml  release.yml
backend/: __init__.py  main.py  runtime.py
backend/connectors/: __init__.py  health.py  qbit.py  radarr.py  sab.py  sonarr.py  umlaut.py
backend/core/: __init__.py  contribution.py  files.py  hashing.py  library.py  matching.py  mediainfo.py  repair.py  scan.py  scheduler.py  settings.py
backend/crowdnfo/: __init__.py  client.py  endpoints.py
backend/db/: operations.py  settings.py
docs/: crowdnfo-api.md  reference-deployment.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts
frontend/src/: App.dashboard.test.tsx  App.logs.test.tsx  App.routing.test.tsx  App.settings.test.tsx  App.tsx  main.tsx  types.ts
frontend/src/api/: client.test.ts  client.ts
frontend/src/components/: AppShell.tsx  icons.tsx  ui.tsx
frontend/src/pages/: DashboardPage.tsx  LogsPage.tsx  SettingsPage.tsx
frontend/src/test/: mockFetch.ts  setup.contract.test.ts  setup.ts
tests/backend/: test_connector_edge_coverage.py  test_connectors.py  test_crowdnfo_client.py  test_filesystem_hashing.py  test_hash_pipeline.py  test_main_coverage.py  test_matching_scheduler.py  test_qbittorrent_repair.py  test_repair_state_store.py  test_runtime_edge_coverage.py  test_runtime_hardening.py  test_runtime_workflow.py  test_settings_api.py
