[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "crowdarrr"
version = "0.1.0"
description = "Self-hosted CrowdNFO companion for repairing and enriching media releases"
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { text = "MIT" }
authors = [{ name = "Crowdarrr contributors" }]
dependencies = [
  "aiosqlite>=0.20,<1",
  "apscheduler>=3.10,<4",
  "cryptography>=48.0.1,<50",
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "pydantic>=2.9,<3",
  "pydantic-settings>=2.5,<3",
  "python-multipart>=0.0.12,<1",
  "pyyaml>=6,<7",
  "sqlalchemy>=2.0,<3",
  "sqlmodel>=0.0.22,<1",
  "structlog>=24,<26",
  "tenacity>=9,<10",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "black>=26.3.1,<27",
  "mypy>=1.11,<3",
  "pip-audit>=2.10,<3",
  "pytest>=9.0.3,<10",
  "pytest-asyncio>=1.4,<2",
  "pytest-cov>=5,<8",
  "ruff>=0.7,<1",
  "types-pyyaml>=6.0,<7",
]

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers -ra"
asyncio_mode = "auto"
testpaths = ["tests/backend"]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 88
extend-exclude = ["frontend", "graphify-out"]

[tool.ruff.lint]
select = ["ASYNC", "B", "E", "F", "I", "N", "SIM", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.black]
target-version = ["py312"]
line-length = 88
extend-exclude = "frontend|graphify-out"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["frontend", "graphify-out"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.coverage.run]
branch = true
source = ["backend"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = true
